--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ a:hover {
 	line-height: 20px;
 }
 
+.quote p:last-child, .quote-home p:last-child {
+	text-align: right;
+}
 
 /*--------------------*/
 /*------ Header ------*/
