--- a/style.css
+++ b/style.css
@@ -337,24 +337,59 @@ header {
 }
 
 .social-navigation a[href*="facebook.com"]:before {
+	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/facebook.png);
+	background-size: 32px;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	content: "";
+}
+
+.social-navigation a[href*="twitter.com"]:before {
+	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/twitter.png);
+	background-size: 32px;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	content: "";
+}
+
+.social-navigation a[href*="linkedin.com"]:before {
+	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/linkedin.png);
+	background-size: 32px;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	content: "";
+}
+
+.social-navigation a[href*="vimeo.com"]:before {
+	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/vimeo.png);
+	background-size: 32px;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	content: "";
+}
+/*.social-navigation a[href*="facebook.com"]:before {
 	content: "\f082";
 }
 
 .social-navigation a[href*="twitter.com"]:before {
 	content: "\f081";
-}
+}*/
 
 .social-navigation a[href*="instagram.com"]:before {
 	content: "\f16d";
 }
 
-.social-navigation a[href*="linkedin.com"]:before {
+/*.social-navigation a[href*="linkedin.com"]:before {
 	content: "\f08c";
 }
 
 .social-navigation a[href*="vimeo.com"]:before {
 	content: "\f194";
-}
+}*/
 
 .social-navigation a[href*="youtube.com"]:before {
 	content: "\f431";
