--- a/style.css
+++ b/style.css
@@ -413,16 +413,16 @@ header {
 
 .home-title {
 	text-align: center;
-	background-color: rgba(255,255,255,0.8);
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-	padding: 20px;
-	max-width: 500px;
 	margin: 0 auto;
 	position: relative;
 	top: 55%;
 	-webkit-transform: translateY(-45%);	
 	transform: translateY(-45%);
+	/*background-color: rgba(255,255,255,0.8);
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	padding: 20px;
+	max-width: 500px;*/
 }
 
 .home-title h1 {
