--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ h4 {font-size: 2.1rem;}
 h5 {font-size: 1.6rem;}
 h6 {font-size: 1.1rem;}
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: Lato, Arial, Helvetica, sans-serif !important;
+	font-weight: 400;
+}
+
 .container {
 	max-width: 1200px;
 	margin-top: 60px;
@@ -128,6 +133,8 @@ header {
 }
 
 .siteinfo p {
+	font-family: Lato, Arial, Helvetica, sans-serif;
+	font-weight: 400;
 	font-size: 14px;
 }
 
@@ -401,6 +408,11 @@ header {
 	background-size: cover;
 }
 
+.home-overlay {
+	height: 600px;
+	background-color: rgba(255,255,255,0.8);
+}
+
 .home-title {
 	text-align: center;
 	margin: 0 auto;
@@ -418,13 +430,13 @@ header {
 .home-title h1 {
 	font-size: 50px;
 	margin: 0 0 2rem;
-	font-family: Lato, Arial, Helvetica, sans-serif;
-	font-weight: 400;
+/*	font-family: Lato, Arial, Helvetica, sans-serif;
+	font-weight: 400;*/
 }
 
 .home-title h2 {
-	font-family: Lato, arial, helvetica, sans-serif;
-	font-weight: 400px !important;
+	/*font-family: Lato, arial, helvetica, sans-serif;
+	font-weight: 400px !important;*/
 	margin: 0;
 }
 
@@ -502,9 +514,9 @@ header {
 }
 
 .tri-box h5 {
-	font-family: Lato, Arial, Helvetica, sans-serif;
+	/*font-family: Lato, Arial, Helvetica, sans-serif;
+	font-weight: 400;*/
 	font-size: 2.2rem;
-	font-weight: 400;
 	margin: 0;
 	line-height: 1.1;
 }
@@ -859,8 +871,8 @@ footer nav ul li a:hover {
 	.mobile-siteinfo h1 {
 		margin-bottom: 0.10em;
 		color: #000;
-		font-family: Lato, Arial, Helvetica, sans-serif;
-		font-weight: 400;
+		/*font-family: Lato, Arial, Helvetica, sans-serif;
+		font-weight: 400;*/
 		font-size: 3.5rem;
 	}
 	
