--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@ h4 {font-size: 2.1rem;}
 h5 {font-size: 1.6rem;}
 h6 {font-size: 1.1rem;}
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: Lato, Arial, Helvetica, sans-serif !important;
-	font-weight: 400;
-}
-
 .container {
 	max-width: 1200px;
 	margin-top: 60px;
@@ -128,7 +123,10 @@ header {
 }
 
 .siteinfo h1 {
-	margin-bottom: 0.50em;
+	font-family: Lato, Arial, Helvetica, sans-serif !important;
+	font-weight: 600;
+	font-size: 4.0rem;
+	margin: 0.30em 0 0.10em;
 	color: #000;
 }
 
@@ -433,11 +431,16 @@ header {
 }
 
 .home-title h1 {
-	font-size: 50px;
-	margin: 0 0 2rem;
+	font-family: Lato, Arial, Helvetica, sans-serif !important;
+	font-weight: 600;
+	font-size: 70px;
+	margin: 0 0 1rem;
 }
 
 .home-title h2 {
+	font-family: Lato, Arial, Helvetica, sans-serif !important;
+	font-weight: 400;
+	font-size: 2.5rem;
 	margin: 0;
 }
 
@@ -889,6 +892,8 @@ footer nav ul li a:hover {
 	}
 	
 	.mobile-siteinfo h1 {
+		font-family: Lato, Arial, Helvetica, sans-serif !important;
+		font-weight: 600;
 		margin-bottom: 0.10em;
 		color: #000;
 		font-size: 3.5rem;
