--- a/style.css
+++ b/style.css
@@ -507,14 +507,14 @@ header {
 	display: -webkit-flex;
 	display: flex;                  /* establish flex container */
 	flex-direction: row;
-	justify-content: flex-end; /* switched from default */
+	justify-content: space-between; /* switched from default */
 	flex-wrap: wrap;
 }
 
 .tri-box {
 	width: 200px;
 	height: 200px;
-	margin: 10px;
+	margin: 10px 10px 10px 0;
 	color: #fff;
 	text-align: center;
 	display: -webkit-box;
@@ -534,6 +534,10 @@ header {
 	word-spacing: 3px;
 }
 
+.tri-box:last-child {
+	margin-right: 0;
+}
+
 .link-boxes a {
 	text-decoration: none;
 }
@@ -541,6 +545,7 @@ header {
 .tri-box:hover {
 	background-position: 0 200px;
 	color: #C54E90;
+	/*background-color: rgba(255,255,255,0.8);*/
 }
 
 
