--- a/style.css
+++ b/style.css
@@ -211,15 +211,16 @@ header {
 
 .main-menu-header ul ul li {
 	float: none;
-	width: 170px;
+	width: auto;
 	display: block;
+	white-space: nowrap;
 	border-bottom: .25px solid #73c92d;
 	padding: 0 3px 8px;
 	margin: 0;
 }
 
 .main-menu-header ul ul li a {
-	padding: 5px 10px;
+	padding: 5px 15px;
 	text-decoration: none;
 	color: #000;
 }
