--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ header {
 	flex-wrap: wrap;
 }
 
-.tri-box {
+.tri-box, .sec-box {
 	margin: 10px 10px 10px 0;
 	text-align: center;
 }
@@ -531,7 +531,7 @@ header {
 	background-color: rgba(0,0,0,0.4);
 }
 
-.tri-box h2, .tri-box-last h2 {
+.tri-box h2, .sec-box h2, .tri-box-last h2 {
 	font-size: 2.2rem;
 	margin: 0;
 	line-height: 1.1;
@@ -899,7 +899,7 @@ footer nav ul li a:hover {
 		width: 170px;
 	}
 	
-	.tri-box h2, .tri-box-last h2 {
+	.tri-box h2, .sec-box h2, .tri-box-last h2 {
 		font-size: 2rem;
 	}
 }
