--- a/style.css
+++ b/style.css
@@ -927,9 +927,9 @@ footer nav ul li a:hover {
 	.mobile-siteinfo h1 {
 		font-family: Lato, Arial, Helvetica, sans-serif !important;
 		font-weight: 600;
-		margin-bottom: 0.10em;
+		margin: 0.30em 0 0.10em;
 		color: #000;
-		font-size: 3.5rem;
+		font-size: 4.0rem;
 	}
 	
 	.mobile-siteinfo p {
@@ -1082,11 +1082,6 @@ footer nav ul li a:hover {
 @media (max-width: 660px) {
 	.home-title {
 		margin: 0 30px;
-	}
-	
-	.home-title h2 {
-		font-size: 40px;
-		margin: 0 0 1rem;
 	}
 	
 	.home-title h3 {
