updates internal links

--- a/style.css
+++ b/style.css
@@ -366,31 +366,31 @@ header {
 }
 
 .social-navigation a[href*="facebook.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/facebook.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/facebook.png);
 }
 
 .social-navigation a[href*="twitter.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/twitter.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/twitter.png);
 }
 
 .social-navigation a[href*="instagram.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/instagram.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/instagram.png);
 }
 
 .social-navigation a[href*="linkedin.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/linkedin.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/linkedin.png);
 }
 
 .social-navigation a[href*="vimeo.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/vimeo.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/vimeo.png);
 }
 
 .social-navigation a[href*="youtube.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/youtube.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/youtube.png);
 }
 
 .social-navigation a[href*="spotify.com"]:before {
-	background-image: url(https://allisoncandreva.com/test/wp-content/themes/frank/images/spotify.png);
+	background-image: url(http://frank.jou.ufl.edu/wp-content/themes/frank2018update/images/spotify.png);
 }
 
 /*--------------------*/
