--- a/style.css
+++ b/style.css
@@ -133,6 +133,12 @@ header {
 	border-bottom: 1px solid #73c92d;
 }
 
+.siteinfo img {
+	float: left;
+	padding-right: 10px;
+	width: 25%;
+}
+
 .siteinfo h1 {
 	font-family: Lato, Arial, Helvetica, sans-serif !important;
 	font-weight: 600;
@@ -444,19 +450,8 @@ header {
 	padding: 0 100px;
 }
 
-.twitter-feed {
-	margin-top: 5px;
-}
-
 .home-content h2 {
 	text-align: center;
-}
-
-.twitter-feed h2 {
-	text-align: center;
-	line-height: 1.7;
-	border-bottom: #ccc solid .5px;
-	margin: 0;
 }
 
 .join-us-btn a {
@@ -475,21 +470,9 @@ header {
 	color: #f7b518;
 }
 
-.fts-twitter-div {
-	margin-bottom: 20px;
-}
-
-.fts-twitter-div a {
-	color: #C54E90;
-}
-
-.fts-twitter-div a:hover {
-	color: #C54E90;
-	text-decoration: underline;
-}
-
-.fts-tweeter-wrap .tweeter-info {
-	border-bottom: #999 .5px solid;
+.home-content p {
+	font-size: 20px;
+	letter-spacing: -.03rem;
 }
 
 .link-boxes {
@@ -938,6 +921,15 @@ footer nav ul li a:hover {
 	
 	.mobile-siteinfo {
 		margin-left: 20px;
+		width: 40%;
+	}
+	
+	.mobile-siteinfo img {
+		float: left;
+		padding-right: 15px;
+		min-width: 60px;
+		max-width: 83px;
+		width: 25%;
 	}
 	
 	.mobile-siteinfo h1 {
@@ -1100,12 +1092,16 @@ footer nav ul li a:hover {
 }
 
 @media (max-width: 660px) {
+	.mobile-siteinfo {
+		width: 45%;
+	}
+	
 	.home-title {
 		margin: 0 30px;
 	}
 	
-	.home-title h3 {
-		font-size: 2.2rem;	
+	.home-title h2 {
+		font-size: 130px;	
 	}
 	
 	.quote, .quote-home {
@@ -1170,6 +1166,10 @@ footer nav ul li a:hover {
 		font-size: 14px;
 	}
 	
+	.mobile-siteinfo {
+		width: 40%;	
+	}
+	
 	#event-tabs label h1 {
 		font-size: 22px;
 	}
@@ -1229,6 +1229,10 @@ footer nav ul li a:hover {
 }
 
 @media (max-width: 440px) {
+	.mobile-siteinfo {
+		width: 50%;
+	}
+	
 	.quote, .quote-home {
 		margin: 0 30px;
 	}
