--- a/style.css
+++ b/style.css
@@ -136,6 +136,11 @@ header {
 .siteheader {
 	max-width: 1200px;
 	margin: auto;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -moz-flex;
+	display: -webkit-flex;
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: nowrap;
